Fixed some stuff

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -450,11 +450,14 @@
 	"item.mubble.vanish_cap": "Vanishs Mütze",
 	"item.mubble.wing_cap": "Wings Mütze",
 	"item.mubble.gooigi_cap": "Gooigi's Mütze",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "Prinzessin Peachs Krone",
 	"item.mubble.princess_daisy_crown": "Prinzessin Daisys Krone",
 	"item.mubble.rosalina_crown": "Rosalina's Krone",
 	"item.mubble.pink_gold_peach_crown": "Peachs Rosagoldene Krone",
 	"item.mubble.super_crown": "Superkrone",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.broque_monsieur_head": "Broque Monsieurs Kopf",
 
 	"item.mubble.bandana": "Kopftuch",
