--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -452,11 +452,14 @@
 	"item.mubble.vanish_cap": "dɐƆ ɥsᴉuɐΛ",
 	"item.mubble.wing_cap": "dɐƆ ƃuᴉM",
 	"item.mubble.gooigi_cap": "dɐƆ s,ᴉƃᴉooפ",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "uʍoɹƆ s,ɥɔɐǝԀ ssǝɔuᴉɹԀ",
 	"item.mubble.princess_daisy_crown": "uʍoɹƆ s,ʎsᴉɐp ssǝɔuᴉɹԀ",
 	"//item.mubble.rosalina_crown": "<newline>",
 	"item.mubble.pink_gold_peach_crown": "uʍoɹƆ s,ɥɔɐǝԀ ploפ ʞuᴉԀ",
 	"item.mubble.super_crown": "uʍoɹƆ ɹǝdnS",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"//item.mubble.broque_monsieur_head": "<newline>",
 
 	"item.mubble.bandana": "ɐuɐpuɐᗺ",
