--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -451,12 +451,15 @@
 	"item.mubble.waluigi_cap": "Waluigi Cap",
 	"item.mubble.vanish_cap": "Vanish Cap",
 	"item.mubble.wing_cap": "Wing Cap",
-	"item.mubble.gooigi_cap": "Gooigi's Cap",
+	"item.mubble.gooigi_cap": "Gooigi Cap",
+	"item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "Princess Peach's Crown",
 	"item.mubble.princess_daisy_crown": "Princess Daisy's Crown",
 	"item.mubble.rosalina_crown": "Rosalina's Crown",
 	"item.mubble.pink_gold_peach_crown": "Pink Gold Peach's Crown",
 	"item.mubble.super_crown": "Super Crown",
+	"item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's Head",
 
 	"item.mubble.bandana": "Bandana",
