--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -450,11 +450,14 @@
 	"item.mubble.vanish_cap": "Gorra de invisibilidad",
 	"item.mubble.wing_cap": "Wing cap",
 	"item.mubble.gooigi_cap": "Gorra de Gooigi",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "Corona de la Princesa Peach",
 	"item.mubble.princess_daisy_crown": "Corona de la Princesa Daisy",
 	"item.mubble.rosalina_crown": "Corona de Estela",
 	"item.mubble.pink_gold_peach_crown": "Corona de Peach de oro rosa",
 	"item.mubble.super_crown": "Supercorona",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.broque_monsieur_head": "Cabeza de Broque Monsieur",
 
 	"item.mubble.bandana": "Pañuelo",
