--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -453,11 +453,14 @@
 	"item.mubble.vanish_cap": "Casquette de disparition",
 	"item.mubble.wing_cap": "Casquette ailée",
 	"item.mubble.gooigi_cap": "Casquette de Gooigi",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "Couronne de la Princesse Peach",
 	"item.mubble.princess_daisy_crown": "Couronne de la Princesse Daisy",
 	"item.mubble.rosalina_crown": "Couronne d'Harmonie",
 	"item.mubble.pink_gold_peach_crown": "Couronne de Peach d'or rose",
 	"item.mubble.super_crown": "Super couronne",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.broque_monsieur_head": "Tête de Charlie Bloc",
 
 	"item.mubble.bandana": "Bandana",
