--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -452,11 +452,14 @@
 	"item.mubble.vanish_cap": "vanis hat",
 	"item.mubble.wing_cap": "fly hat",
 	"item.mubble.gooigi_cap": "googy hat",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "peech cron",
 	"item.mubble.princess_daisy_crown": "disi  cron",
 	"item.mubble.rosalina_crown": "rolina con",
 	"item.mubble.pink_gold_peach_crown": "pingol peech cron",
 	"item.mubble.super_crown": "waifu creator",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.broque_monsieur_head": "HELPEEEZ MOIIII SIVOULPAI",
 
 	"item.mubble.bandana": "banana",
