--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -452,11 +452,14 @@
 	"item.mubble.vanish_cap": "Verdwijn pet",
 	"item.mubble.wing_cap": "Vleugel pet",
 	"item.mubble.gooigi_cap": "Gooigi's pet",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "Prinses Peach's kroon",
 	"item.mubble.princess_daisy_crown": "Prinses Daisy's kroon",
 	"item.mubble.rosalina_crown": "Rosaline's kroon",
 	"item.mubble.pink_gold_peach_crown": "Rozegouden Peach's kroon",
 	"item.mubble.super_crown": "Superkroon",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's hoofd",
 
 	"item.mubble.bandana": "Bandana",
