--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -452,11 +452,14 @@
 	"item.mubble.vanish_cap": "Boné de Desaparecer",
 	"item.mubble.wing_cap": "Boné de Asas",
 	"item.mubble.gooigi_cap": "Boné de Gooigi",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "Coroa da Princesa Peach",
 	"item.mubble.princess_daisy_crown": "Coroa da Princesa Daisy",
 	"item.mubble.rosalina_crown": "Rosalina's Crown",
 	"item.mubble.pink_gold_peach_crown": "Coroa Rosa Ouro da Peach",
 	"item.mubble.super_crown": "Super Coroa",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.broque_monsieur_head": "Cabeça de Broque Monsieur",
 
 	"item.mubble.bandana": "Bandana",
