--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -452,11 +452,14 @@
 	"item.mubble.vanish_cap": "消失的帽子",
 	"item.mubble.wing_cap": "翼帽",
 	"item.mubble.gooigi_cap": "古基的帽子",
+	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
+	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
 	"item.mubble.princess_peach_crown": "碧奇公主的王冠",
 	"item.mubble.princess_daisy_crown": "黛西公主的王冠",
 	"//item.mubble.rosalina_crown": "<newline>",
 	"//item.mubble.pink_gold_peach_crown": "<newline>",
 	"item.mubble.super_crown": "超級王冠",
+	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"//item.mubble.broque_monsieur_head": "<newline>",
 
 	"item.mubble.bandana": "手帕",
