--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -319,8 +319,6 @@
 	"block.mubble.blue_studiopolis_clapper": "Blaue Studiopolis-Filmklappe",
 	"block.mubble.spring": "Feder",
 
-	"block.mubble.scarlet_grass_block": "Scharlachroter Grassblock",
-	"block.mubble.scarlet_grass": "Scharlachrotes Grass",
 	"block.mubble.scarlet_mushroom": "Scharlachroter Pilz",
 	"block.mubble.scarlet_orchid": "Scharlachrote Orchidee",
 
@@ -353,6 +351,30 @@
 
 	"block.mubble.koretato_block": "Koretato-block",
 	"block.mubble.potato_flower": "Kartoffelblume",
+
+	"//block.mubble.potted_palm_sapling": "Potted Palm Sapling",
+	"//block.mubble.potted_fire_flower": "Potted Fire Flower",
+	"//block.mubble.potted_ice_flower": "Potted Ice Flower",
+	"//block.mubble.potted_boomerang_flower": "Potted Boomerang Flower",
+	"//block.mubble.potted_cloud_flower": "Potted Cloud Flower",
+	"//block.mubble.potted_gold_flower": "Potted Gold Flower",
+	"//block.mubble.potted_blue_mushroom": "Potted Blue Mushroom",
+	"//block.mubble.potted_light_blue_mushroom": "Potted Light Blue Mushroom",
+	"//block.mubble.potted_cyan_mushroom": "Potted Cyan Mushroom",
+	"//block.mubble.potted_green_mushroom": "Potted Green Mushroom",
+	"//block.mubble.potted_lime_mushroom": "Potted Lime Mushroom",
+	"//block.mubble.potted_yellow_mushroom": "Potted Yellow Mushroom",
+	"//block.mubble.potted_orange_mushroom": "Potted Orange Mushroom",
+	"//block.mubble.potted_pink_mushroom": "Potted Pink Mushroom",
+	"//block.mubble.potted_magenta_mushroom": "Potted Magenta Mushroom",
+	"//block.mubble.potted_purple_mushroom": "Potted Purple Mushroom",
+	"//block.mubble.potted_white_mushroom": "Potted White Mushroom",
+	"//block.mubble.potted_light_gray_mushroom": "Potted Light Gray Mushroom",
+	"//block.mubble.potted_gray_mushroom": "Potted Gray Mushroom",
+	"//block.mubble.potted_black_mushroom": "Potted Black Mushroom",
+	"//block.mubble.potted_scarlet_mushroom": "Potted Scarlet Mushroom",
+	"//block.mubble.potted_scarlet_orchid": "Potted Scarlet Orchid",
+	"//block.mubble.potted_potato_flower": "Potted Potato Flower",
 
 	"comment": "ITEMS",
 	"item.mubble.baguette": "Stangenweißbrot",
