--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -226,6 +226,7 @@
 	"block.mubble.light_gray_balloon": "Light Gray Balloon",
 	"block.mubble.gray_balloon": "Gray Balloon",
 	"block.mubble.black_balloon": "Black Balloon",
+	"block.mubble.unstable_stone": "Unstable Stone",
 
 	"block.mubble.question_block": "? Block",
 	"block.mubble.empty_block": "Empty Block",
@@ -392,6 +393,9 @@
 	"item.mubble.tomato": "Tomato",
 	"item.mubble.salad": "Salad",
 	"item.mubble.cheese": "Cheese",
+	"item.mubble.banana": "Banana",
+	"item.mubble.apricot": "Apricot",
+	"item.mubble.mango": "Mango",
 	"item.mubble.totem_of_ascending": "Totem of Ascending",
 
 	"item.mubble.super_mushroom": "Super Mushroom",
