--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -224,6 +224,7 @@
 	"//block.mubble.light_gray_balloon": "<newline>",
 	"//block.mubble.gray_balloon": "<newline>",
 	"//block.mubble.black_balloon": "<newline>",
+	"//block.mubble.unstable_stone": "Unstable Stone",
 
 	"block.mubble.question_block": "Bloque ?",
 	"block.mubble.empty_block": "Bloque vacío",
@@ -390,6 +391,9 @@
 	"item.mubble.tomato": "Tomate",
 	"item.mubble.salad": "Ensalada",
 	"item.mubble.cheese": "Queso",
+	"//item.mubble.banana": "Banana",
+	"//item.mubble.apricot": "Apricot",
+	"//item.mubble.mango": "Mango",
 	"//item.mubble.totem_of_ascending": "<newline>",
 
 	"item.mubble.super_mushroom": "Súper champiñón",
