--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -226,6 +226,7 @@
 	"block.mubble.light_gray_balloon": "Ballon gris clair",
 	"block.mubble.gray_balloon": "Ballon gris",
 	"block.mubble.black_balloon": "Ballon noir",
+	"//block.mubble.unstable_stone": "Unstable Stone",
 
 	"block.mubble.question_block": "Bloc ?",
 	"block.mubble.empty_block": "Bloc vide",
@@ -392,7 +393,9 @@
 	"item.mubble.tomato": "Tomato",
 	"item.mubble.salad": "Salade",
 	"item.mubble.cheese": "Fromage",
-
+	"item.mubble.banana": "Banane",
+	"item.mubble.apricot": "Abricot",
+	"item.mubble.mango": "Mangue",
 	"item.mubble.totem_of_ascending": "Totem d'ascendance",
 
 	"item.mubble.super_mushroom": "Super champignon",
