--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -226,6 +226,7 @@
 	"block.mubble.light_gray_balloon": "Balão Cinza Claro",
 	"block.mubble.gray_balloon": "Balão Cinza",
 	"block.mubble.black_balloon": "Balão Preto",
+	"//block.mubble.unstable_stone": "Unstable Stone",
 
 	"block.mubble.question_block": "Bloco de ?",
 	"block.mubble.empty_block": "Bloco Vazio",
@@ -392,6 +393,9 @@
 	"item.mubble.tomato": "Tomate",
 	"item.mubble.salad": "Salada",
 	"item.mubble.cheese": "Queijo",
+	"//item.mubble.banana": "Banana",
+	"//item.mubble.apricot": "Apricot",
+	"//item.mubble.mango": "Mango",
 	"item.mubble.totem_of_ascending": "Totem da Ascensão",
 
 	"item.mubble.super_mushroom": "Super Cogumelo",
