--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -225,6 +225,7 @@
 	"block.mubble.gray_balloon": "Grauer Luftballon",
 	"block.mubble.black_balloon": "Schwarzer Luftballon",
 	"//block.mubble.unstable_stone": "Unstable Stone",
+	"//block.mubble.fluid_tank": "Fluid Tank",
 
 	"block.mubble.question_block": "?-block",
 	"block.mubble.empty_block": "Leerer Block",
@@ -267,6 +268,8 @@
 	"block.mubble.light_gray_mushroom_block": "Hellgrauer Pilzblock",
 	"block.mubble.gray_mushroom_block": "Grauer Pilzblock",
 	"block.mubble.black_mushroom_block": "Schwarzer Pilzblock",
+
+	"//block.mubble.kirby_block": "Kirby Block",
 
 	"block.mubble.blue_tetris_block": "Blauer Tetrisblock",
 	"block.mubble.light_blue_tetris_block": "Hellblauer Tetrisblock",
