--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -227,6 +227,7 @@
 	"//block.mubble.gray_balloon": "<newline>",
 	"//block.mubble.black_balloon": "<newline>",
 	"//block.mubble.unstable_stone": "Unstable Stone",
+	"//block.mubble.fluid_tank": "Fluid Tank",
 
 	"block.mubble.question_block": "? Block",
 	"block.mubble.empty_block": "Empty Block",
@@ -269,6 +270,8 @@
 	"block.mubble.light_gray_mushroom_block": "Light Grey Mushroom Block",
 	"block.mubble.gray_mushroom_block": "Grey Mushroom Block",
 	"block.mubble.black_mushroom_block": "Black Mushroom Block",
+
+	"//block.mubble.kirby_block": "Kirby Block",
 
 	"//block.mubble.blue_tetris_block": "<newline>",
 	"//block.mubble.light_blue_tetris_block": "<newline>",
