--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -227,6 +227,7 @@
 	"block.mubble.gray_balloon": "Gray Balloon",
 	"block.mubble.black_balloon": "Black Balloon",
 	"block.mubble.unstable_stone": "Unstable Stone",
+	"block.mubble.fluid_tank": "Fluid Tank",
 
 	"block.mubble.question_block": "? Block",
 	"block.mubble.empty_block": "Empty Block",
@@ -269,6 +270,8 @@
 	"block.mubble.light_gray_mushroom_block": "Light Gray Mushroom Block",
 	"block.mubble.gray_mushroom_block": "Gray Mushroom Block",
 	"block.mubble.black_mushroom_block": "Black Mushroom Block",
+
+	"block.mubble.kirby_block": "Kirby Block",
 
 	"block.mubble.blue_tetris_block": "Blue Tetris Block",
 	"block.mubble.light_blue_tetris_block": "Light Blue Tetris Block",
