--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -227,6 +227,7 @@
 	"block.mubble.gray_balloon": "lesser wot beloon",
 	"block.mubble.black_balloon": "not even wot beloon",
 	"//block.mubble.unstable_stone": "Unstable Stone",
+	"//block.mubble.fluid_tank": "Fluid Tank",
 
 	"block.mubble.question_block": "BLOC ???? BLOOOOOC ?????????????",
 	"block.mubble.empty_block": "GBJ",
@@ -269,6 +270,8 @@
 	"block.mubble.light_gray_mushroom_block": "legit greey blocroom",
 	"block.mubble.gray_mushroom_block": "greey blocroom",
 	"block.mubble.black_mushroom_block": "blac blocroom",
+
+	"//block.mubble.kirby_block": "Kirby Block",
 
 	"//block.mubble.blue_tetris_block": "<newline>",
 	"//block.mubble.light_blue_tetris_block": "<newline>",
