--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -227,6 +227,7 @@
 	"block.mubble.gray_balloon": "Balão Cinza",
 	"block.mubble.black_balloon": "Balão Preto",
 	"//block.mubble.unstable_stone": "Unstable Stone",
+	"//block.mubble.fluid_tank": "Fluid Tank",
 
 	"block.mubble.question_block": "Bloco de ?",
 	"block.mubble.empty_block": "Bloco Vazio",
@@ -269,6 +270,8 @@
 	"block.mubble.light_gray_mushroom_block": "Bloco de Cogumelo Cinza Claro",
 	"block.mubble.gray_mushroom_block": "Bloco de Cogumelo Cinza",
 	"block.mubble.black_mushroom_block": "Bloco de Cogumelo Preto",
+
+	"//block.mubble.kirby_block": "Kirby Block",
 
 	"block.mubble.blue_tetris_block": "Bloco Azul de Tetris",
 	"block.mubble.light_blue_tetris_block": "Bloco Azul Claro de Tetris",
