--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1,6 +1,6 @@
 {
 	"comment": "CREATIVE TABS",
-	"//itemGroup.costumes": "Costumes",
+	"itemGroup.costumes": "Trajes",
 
 	"comment": "BLOCKS",
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
@@ -226,8 +226,8 @@
 	"block.mubble.light_gray_balloon": "Balão Cinza Claro",
 	"block.mubble.gray_balloon": "Balão Cinza",
 	"block.mubble.black_balloon": "Balão Preto",
-	"//block.mubble.unstable_stone": "Unstable Stone",
-	"//block.mubble.fluid_tank": "Fluid Tank",
+	"block.mubble.unstable_stone": "Pedra Instável",
+	"block.mubble.fluid_tank": "Tanque de Fluído",
 
 	"block.mubble.question_block": "Bloco de ?",
 	"block.mubble.empty_block": "Bloco Vazio",
@@ -271,7 +271,7 @@
 	"block.mubble.gray_mushroom_block": "Bloco de Cogumelo Cinza",
 	"block.mubble.black_mushroom_block": "Bloco de Cogumelo Preto",
 
-	"//block.mubble.kirby_block": "Kirby Block",
+	"block.mubble.kirby_block": "Bloco de Kirby",
 
 	"block.mubble.blue_tetris_block": "Bloco Azul de Tetris",
 	"block.mubble.light_blue_tetris_block": "Bloco Azul Claro de Tetris",
@@ -358,32 +358,32 @@
 	"block.mubble.koretato_block": "Bloco Koretato",
 	"block.mubble.potato_flower": "Flor de Batata",
 
-	"//block.mubble.potted_palm_sapling": "Potted Palm Sapling",
-	"//block.mubble.potted_fire_flower": "Potted Fire Flower",
-	"//block.mubble.potted_ice_flower": "Potted Ice Flower",
-	"//block.mubble.potted_boomerang_flower": "Potted Boomerang Flower",
-	"//block.mubble.potted_cloud_flower": "Potted Cloud Flower",
-	"//block.mubble.potted_gold_flower": "Potted Gold Flower",
-	"//block.mubble.potted_blue_mushroom": "Potted Blue Mushroom",
-	"//block.mubble.potted_light_blue_mushroom": "Potted Light Blue Mushroom",
-	"//block.mubble.potted_cyan_mushroom": "Potted Cyan Mushroom",
-	"//block.mubble.potted_green_mushroom": "Potted Green Mushroom",
-	"//block.mubble.potted_lime_mushroom": "Potted Lime Mushroom",
-	"//block.mubble.potted_yellow_mushroom": "Potted Yellow Mushroom",
-	"//block.mubble.potted_orange_mushroom": "Potted Orange Mushroom",
-	"//block.mubble.potted_pink_mushroom": "Potted Pink Mushroom",
-	"//block.mubble.potted_magenta_mushroom": "Potted Magenta Mushroom",
-	"//block.mubble.potted_purple_mushroom": "Potted Purple Mushroom",
-	"//block.mubble.potted_white_mushroom": "Potted White Mushroom",
-	"//block.mubble.potted_light_gray_mushroom": "Potted Light Gray Mushroom",
-	"//block.mubble.potted_gray_mushroom": "Potted Gray Mushroom",
-	"//block.mubble.potted_black_mushroom": "Potted Black Mushroom",
-	"//block.mubble.potted_scarlet_mushroom": "Potted Scarlet Mushroom",
-	"//block.mubble.potted_scarlet_orchid": "Potted Scarlet Orchid",
-	"//block.mubble.potted_potato_flower": "Potted Potato Flower",
+	"block.mubble.potted_palm_sapling": "Vaso de Muda de Palmeira",
+	"block.mubble.potted_fire_flower": "Vaso de Flor de Fogo",
+	"block.mubble.potted_ice_flower": "Vaso de Flor de Gelo",
+	"block.mubble.potted_boomerang_flower": "Vaso de Flor Bumerangue",
+	"block.mubble.potted_cloud_flower": "Vaso de Flor de Nuvem",
+	"block.mubble.potted_gold_flower": "Vaso de Flor de Ouro",
+	"block.mubble.potted_blue_mushroom": "Vaso de Cogumelo Azul",
+	"block.mubble.potted_light_blue_mushroom": "Vaso de Cogumelo Azul Claro",
+	"block.mubble.potted_cyan_mushroom": "Vaso de Cogumelo Ciano",
+	"block.mubble.potted_green_mushroom": "Vaso de Cogumelo Verde",
+	"block.mubble.potted_lime_mushroom": "Vaso de Cogumelo Lima",
+	"block.mubble.potted_yellow_mushroom": "Vaso de Cogumelo Amarelo",
+	"block.mubble.potted_orange_mushroom": "Vaso de Cogumelo Laranja",
+	"block.mubble.potted_pink_mushroom": "Vaso de Cogumelo Rosa",
+	"block.mubble.potted_magenta_mushroom": "Vaso de Cogumelo Magenta",
+	"block.mubble.potted_purple_mushroom": "Vaso de Cogumelo Roxo",
+	"block.mubble.potted_white_mushroom": "Vaso de Cogumelo Branco",
+	"block.mubble.potted_light_gray_mushroom": "Vaso de Cogumelo Cinza Claro",
+	"block.mubble.potted_gray_mushroom": "Vaso de Cogumelo Cinza",
+	"block.mubble.potted_black_mushroom": "Vaso de Cogumelo Preto",
+	"block.mubble.potted_scarlet_mushroom": "Vaso de Cogumelo Escarlate",
+	"block.mubble.potted_scarlet_orchid": "Vaso de Orquidea Escarlate",
+	"block.mubble.potted_potato_flower": "Vaso de Flor de Batata",
 
 	"comment": "ITEMS",
-	"//item.mubble.baguette": "Baguette",
+	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bandage": "Bandagem",
 	"item.mubble.wheat_flour": "Farinha de Trigo",
@@ -396,9 +396,9 @@
 	"item.mubble.tomato": "Tomate",
 	"item.mubble.salad": "Salada",
 	"item.mubble.cheese": "Queijo",
-	"//item.mubble.banana": "Banana",
-	"//item.mubble.apricot": "Apricot",
-	"//item.mubble.mango": "Mango",
+	"item.mubble.banana": "Banana",
+	"item.mubble.apricot": "Damasco",
+	"item.mubble.mango": "Manga",
 	"item.mubble.totem_of_ascending": "Totem da Ascensão",
 
 	"item.mubble.super_mushroom": "Super Cogumelo",
@@ -481,14 +481,14 @@
 	"item.mubble.vanish_cap": "Boné de Desaparecer",
 	"item.mubble.wing_cap": "Boné de Asas",
 	"item.mubble.gooigi_cap": "Boné de Gooigi",
-	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
-	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
+	"item.mubble.gold_mario_cap": "Boné de Ouro do Mario",
+	"item.mubble.silver_luigi_cap": "Boné de Prata do Luigi",
 	"item.mubble.princess_peach_crown": "Coroa da Princesa Peach",
 	"item.mubble.princess_daisy_crown": "Coroa da Princesa Daisy",
 	"item.mubble.rosalina_crown": "Rosalina's Crown",
 	"item.mubble.pink_gold_peach_crown": "Coroa Rosa Ouro da Peach",
 	"item.mubble.super_crown": "Super Coroa",
-	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
+	"item.mubble.mario_wedding_hat": "Chapéu de Casamento do Mario",
 	"item.mubble.broque_monsieur_head": "Cabeça de Broque Monsieur",
 
 	"item.mubble.bandana": "Bandana",
@@ -502,7 +502,7 @@
 
 	"item.mubble.baldi_head": "Cabeça de Baldi",
 
-	"//item.mubble.paul_mask": "Paul's Mask",
+	"item.mubble.paul_mask": "Máscara de Paul,
 
 	"item.mubble.mayro_cap": "Boné de Mayro",
 	"item.mubble.noteblock_head": "Cabeça de Noteblock",
