Added Cherry Blossom and Autumn trees/biomes/leaves

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -42,6 +42,10 @@
 	"block.mubble.palm_fence_gate": "Palmenholzzauntor",
 	"block.mubble.palm_fence": "Palmenholzzaun",
 	"block.mubble.palm_door": "Palmenholztür",
+	"//block.mubble.autumn_sapling": "Autumn Sapling",
+	"//block.mubble.autumn_leaves": "Autumn Leaves",
+	"//block.mubble.cherry_blossom_sapling": "Cherry Blossom Sapling",
+	"//block.mubble.cherry_blossom_leaves": "Cherry Blossom Leaves",
 
 	"block.mubble.blue_bricks": "Blaue Ziegelsteine",
 	"block.mubble.light_blue_bricks": "Hellblaue Ziegelsteine",
@@ -598,6 +602,8 @@
 
 
 	"comment": "BIOMES",
+	"//biome.mubble.autumn_forest": "Autumn Forest",
+	"//biome.mubble.cherry_blossom_forest": "Cherry Blossom Forest",
 	"//biome.mubble.scarlet_forest": "Scarlet Forest",
 
 
