--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -42,6 +42,10 @@
 	"block.mubble.palm_fence_gate": "Palmhouten poort",
 	"block.mubble.palm_fence": "Palmhouten hek",
 	"block.mubble.palm_door": "Palmhouten deur",
+	"//block.mubble.autumn_sapling": "Autumn Sapling",
+	"//block.mubble.autumn_leaves": "Autumn Leaves",
+	"//block.mubble.cherry_blossom_sapling": "Cherry Blossom Sapling",
+	"//block.mubble.cherry_blossom_leaves": "Cherry Blossom Leaves",
 
 	"block.mubble.blue_bricks": "Blauwe bakstenen",
 	"block.mubble.light_blue_bricks": "Lichtblauwe bakstenen",
@@ -599,6 +603,8 @@
 
 
 	"comment": "BIOMES",
+	"//biome.mubble.autumn_forest": "Autumn Forest",
+	"//biome.mubble.cherry_blossom_forest": "Cherry Blossom Forest",
 	"//biome.mubble.scarlet_forest": "Scarlet Forest",
 
 
