--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -42,6 +42,10 @@
 	"block.mubble.palm_fence_gate": "Portão de Palmeira",
 	"block.mubble.palm_fence": "Cerca de Palmeira",
 	"block.mubble.palm_door": "Porta de Palmeira",
+	"//block.mubble.autumn_sapling": "Autumn Sapling",
+	"//block.mubble.autumn_leaves": "Autumn Leaves",
+	"//block.mubble.cherry_blossom_sapling": "Cherry Blossom Sapling",
+	"//block.mubble.cherry_blossom_leaves": "Cherry Blossom Leaves",
 
 	"block.mubble.blue_bricks": "Tijolos Azuis",
 	"block.mubble.light_blue_bricks": "Tijolos Azul Claros",
@@ -599,6 +603,8 @@
 
 
 	"comment": "BIOMES",
+	"//biome.mubble.autumn_forest": "Autumn Forest",
+	"//biome.mubble.cherry_blossom_forest": "Cherry Blossom Forest",
 	"//biome.mubble.scarlet_forest": "Scarlet Forest",
 
 
