--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -26,6 +26,10 @@
 
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
 	"block.mubble.vanadium_ore": "Minério de Vanadium",
+	"//block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
+	"//block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
+	"//block.mubble.cherry_oak_sapling": "Cherry Oak Sapling",
+	"//block.mubble.cherry_oak_leaves": "Cherry Oak Leaves",
 	"block.mubble.palm_planks": "Tábua de Palmeira",
 	"block.mubble.palm_sapling": "Muda de Palmeira",
 	"block.mubble.palm_log": "Palmeira",
@@ -42,10 +46,6 @@
 	"block.mubble.palm_fence_gate": "Portão de Palmeira",
 	"block.mubble.palm_fence": "Cerca de Palmeira",
 	"block.mubble.palm_door": "Porta de Palmeira",
-	"//block.mubble.autumn_sapling": "Autumn Sapling",
-	"//block.mubble.autumn_leaves": "Autumn Leaves",
-	"//block.mubble.cherry_blossom_sapling": "Cherry Blossom Sapling",
-	"//block.mubble.cherry_blossom_leaves": "Cherry Blossom Leaves",
 
 	"block.mubble.blue_bricks": "Tijolos Azuis",
 	"block.mubble.light_blue_bricks": "Tijolos Azul Claros",
@@ -603,8 +603,8 @@
 
 
 	"comment": "BIOMES",
-	"//biome.mubble.autumn_forest": "Autumn Forest",
-	"//biome.mubble.cherry_blossom_forest": "Cherry Blossom Forest",
+	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
+	"//biome.mubble.cherry_oak_forest": "Cherry Oak Forest",
 	"//biome.mubble.scarlet_forest": "Scarlet Forest",
 
 
