--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -5,31 +5,31 @@
 
 
 	"comment": "BLOCKS",
-	"//block.mubble.oak_vertical_slab": "Oak Vertical Slab",
-	"//block.mubble.spruce_vertical_slab": "Spruce Vertical Slab",
-	"//block.mubble.birch_vertical_slab": "Birch Vertical Slab",
-	"//block.mubble.jungle_vertical_slab": "Jungle Vertical Slab",
-	"//block.mubble.acacia_vertical_slab": "Acacia Vertical Slab",
-	"//block.mubble.dark_oak_vertical_slab": "Dark Oak Vertical Slab",
-	"//block.mubble.stone_vertical_slab": "Stone Vertical Slab",
-	"//block.mubble.sandstone_vertical_slab": "Sandstone Vertical Slab",
-	"//block.mubble.cobblestone_vertical_slab": "Cobblestone Vertical Slab",
-	"//block.mubble.brick_vertical_slab": "Brick Vertical Slab",
-	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
-	"//block.mubble.nether_brick_vertical_slab": "Nether Brick Vertical Slab",
-	"//block.mubble.quartz_vertical_slab": "Quartz Vertical Slab",
-	"//block.mubble.red_sandstone_vertical_slab": "Red Sandstone Vertical Slab",
-	"//block.mubble.purpur_vertical_slab": "Purpur Vertical Slab",
-	"//block.mubble.prismarine_vertical_slab": "Prismarine Vertical Slab",
-	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
-	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
+	"block.mubble.oak_vertical_slab": "Laje Vertical de Carvalho",
+	"block.mubble.spruce_vertical_slab": "Laje Vertical de Pinheiro",
+	"block.mubble.birch_vertical_slab": "Laje Vertical de Eucalipto",
+	"block.mubble.jungle_vertical_slab": "Laje Vertical de Selva",
+	"block.mubble.acacia_vertical_slab": "Laje Vertical de Acácia",
+	"block.mubble.dark_oak_vertical_slab": "Laje Vertical de Carvalho Escuro",
+	"block.mubble.stone_vertical_slab": "Laje Vertical de Pedra",
+	"block.mubble.sandstone_vertical_slab": "Laje Vertical de Arenito",
+	"block.mubble.cobblestone_vertical_slab": "Laje Vertical de Pedregulho",
+	"block.mubble.brick_vertical_slab": "Laje Vertical de Tijolo",
+	"block.mubble.stone_brick_vertical_slab": "Laje Vertical de Tijolo de Pedra",
+	"block.mubble.nether_brick_vertical_slab": "Laje Vertical de Tijolo do Nether",
+	"block.mubble.quartz_vertical_slab": "Laje Vertical de Quartzo",
+	"block.mubble.red_sandstone_vertical_slab": "Laje Vertical de Arenito Vermelho",
+	"block.mubble.purpur_vertical_slab": "Laje Vertical de Purpura",
+	"block.mubble.prismarine_vertical_slab": "Laje Vertical de Prismarina",
+	"block.mubble.prismarine_brick_vertical_slab": "Laje Vertical de Tijolo de Prismarina",
+	"block.mubble.dark_prismarine_vertical_slab": "Laje Vertical de Prismarina Escura",
 
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
 	"block.mubble.vanadium_ore": "Minério de Vanadium",
-	"//block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
-	"//block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
-	"//block.mubble.cherry_oak_sapling": "Cherry Oak Sapling",
-	"//block.mubble.cherry_oak_leaves": "Cherry Oak Leaves",
+	"block.mubble.autumn_oak_sapling": "Muda de Carvalho de Outono",
+	"block.mubble.autumn_oak_leaves": "Folhas de Carvalho de Outono",
+	"block.mubble.cherry_oak_sapling": "Muda de Carvalho Cereja",
+	"block.mubble.cherry_oak_leaves": "Folhas de Carvalho Cereja",
 	"block.mubble.palm_planks": "Tábua de Palmeira",
 	"block.mubble.palm_sapling": "Muda de Palmeira",
 	"block.mubble.palm_log": "Palmeira",
@@ -372,22 +372,22 @@
 	"block.mubble.spring": "Mola",
 
 
-	"//block.mubble.scarlet_planks": "Scarlet Planks",
-	"//block.mubble.scarlet_sapling": "Scarlet Sapling",
-	"//block.mubble.scarlet_log": "Scarlet Log",
-	"//block.mubble.stripped_scarlet_log": "Stripped Scarlet Log",
-	"//block.mubble.scarlet_wood": "Scarlet Wood",
-	"//block.mubble.stripped_scarlet_wood": "Stripped Scarlet Wood",
-	"//block.mubble.scarlet_leaves": "Scarlet Leaves",
-	"//block.mubble.scarlet_pressure_plate": "Scarlet Pressure Plate",
-	"//block.mubble.scarlet_trapdoor": "Scarlet Trapdoor",
-	"//block.mubble.scarlet_button": "Scarlet Button",
-	"//block.mubble.scarlet_stairs": "Scarlet Stairs",
-	"//block.mubble.scarlet_slab": "Scarlet Slab",
-	"//block.mubble.scarlet_vertical_slab": "Scarlet Vertical Slab",
-	"//block.mubble.scarlet_fence_gate": "Scarlet Fence Gate",
-	"//block.mubble.scarlet_fence": "Scarlet Fence",
-	"//block.mubble.scarlet_door": "Scarlet Door",
+	"block.mubble.scarlet_planks": "Tábuas Escarlate",
+	"block.mubble.scarlet_sapling": "Muda de Escarlate",
+	"block.mubble.scarlet_log": "Escarlate",
+	"block.mubble.stripped_scarlet_log": "Escarlate Descascada",
+	"block.mubble.scarlet_wood": "Madeira de Escarlate",
+	"block.mubble.stripped_scarlet_wood": "Madeira de Escarlate Descascada",
+	"block.mubble.scarlet_leaves": "Folhas de Escarlate",
+	"block.mubble.scarlet_pressure_plate": "Placa de Pressão de Escarlate",
+	"block.mubble.scarlet_trapdoor": "Alçapão de Escarlate",
+	"block.mubble.scarlet_button": "Botão de Escarlate",
+	"block.mubble.scarlet_stairs": "Escadas de Escarlate",
+	"block.mubble.scarlet_slab": "Laje de Escarlate",
+	"block.mubble.scarlet_vertical_slab": "Laje Vertical de Escarlate",
+	"block.mubble.scarlet_fence_gate": "Portão de Escarlate",
+	"block.mubble.scarlet_fence": "Cerca de Escarlate",
+	"block.mubble.scarlet_door": "Porta de Escarlate",
 	"block.mubble.scarlet_mushroom": "Cogumelo Escarlate",
 	"block.mubble.scarlet_orchid": "Orquídea Escarlate",
 
@@ -445,7 +445,7 @@
 	"block.mubble.potted_light_gray_mushroom": "Vaso de Cogumelo Cinza Claro",
 	"block.mubble.potted_gray_mushroom": "Vaso de Cogumelo Cinza",
 	"block.mubble.potted_black_mushroom": "Vaso de Cogumelo Preto",
-	"//block.mubble.potted_scarlet_sapling": "Potted Scarlet Sapling",
+	"block.mubble.potted_scarlet_sapling": "Vaso de Muda de Escarlate",
 	"block.mubble.potted_scarlet_mushroom": "Vaso de Cogumelo Escarlate",
 	"block.mubble.potted_scarlet_orchid": "Vaso de Orquidea Escarlate",
 	"block.mubble.potted_potato_flower": "Vaso de Flor de Batata",
@@ -603,9 +603,9 @@
 
 
 	"comment": "BIOMES",
-	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
-	"//biome.mubble.cherry_oak_forest": "Cherry Oak Forest",
-	"//biome.mubble.scarlet_forest": "Scarlet Forest",
+	"biome.mubble.autumn_oak_forest": "Floresta de Carvalho de Outono",
+	"biome.mubble.cherry_oak_forest": "Floresta de Carvalho Cereja",
+	"biome.mubble.scarlet_forest": "Floresta de Escarlate",
 
 
 
